--- a/src/by/epam/training/resources/log4j.properties
+++ b/src/by/epam/training/resources/log4j.properties
@@ -9,4 +9,4 @@ log4j.appender.stdout.target=System.out
 # choosing layout pattern type for "stdout"
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
-log4j.appender.stdout.layout.conversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
+log4j.appender.stdout.layout.conversionPattern=%m%n
