--- a/src/by/epam/training/resources/log4j.properties
+++ b/src/by/epam/training/resources/log4j.properties
@@ -1,12 +1,19 @@
+log4j.rootLogger=DEBUG, stdout, file
 
-# declaring root logger
-log4j.rootLogger=info, stdout
-
-# choosing Appender type for appender named "stdout"
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-# linking "stdout" appender to stdout stream
 log4j.appender.stdout.target=System.out
-# choosing layout pattern type for "stdout"
+log4j.appender.stdout.Threshold=INFO
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
 log4j.appender.stdout.layout.conversionPattern=%m%n
+log4j.appender.stdout.filter.1=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.stdout.filter.1.LevelMin=INFO
+log4j.appender.stdout.filter.1.LevelMax=INFO
+
+log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file.file=error.log
+log4j.appender.file.Threshold=ERROR
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.conversionPattern=%n%d{ABSOLUTE} %5p %t [%c{1}]:%M:%L - %m%n
+log4j.appender.file.filter.1=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.file.filter.1.LevelMin=ERROR
+log4j.appender.file.filter.1.LevelMax=ERROR
