--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.stdout.filter.1.LevelMin=INFO
 log4j.appender.stdout.filter.1.LevelMax=INFO
 
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.file=error.log
+log4j.appender.file.file=logs/error.log
 log4j.appender.file.Threshold=ERROR
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern=%n%d{ABSOLUTE} %5p %t [%c{1}]:%M:%L - %m%n
