--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.target=System.out
 log4j.appender.stdout.Threshold=INFO
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.conversionPattern=%m%n
+log4j.appender.stdout.layout.conversionPattern=%m
 log4j.appender.stdout.filter.1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.stdout.filter.1.LevelMin=INFO
 log4j.appender.stdout.filter.1.LevelMax=INFO
